--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,18 +3,34 @@
     <p>{{{body}}}</p>
     <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
-
-<div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
-    <form action="/posts/{{id}}/comments" method="post" class="new-comment-form">
-      <textarea class='form-control' id="comment" name="content" placeholder="Comment"></textarea>
-      <div class="text-right">
-        <button type="submit" class="btn btn-primary">Save</button>
-      </div>
+<div>
+{{#if logged_in}}
+    <form class="form new-project-form">
+      <div class="form-group">
+            <label for="project-desc">Comment:</label>
+            <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Add Comment</button>
+          </div>
+          <div>
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
+          </div>
     </form>
-  </div>
-</div>
 
-<script src="./js/comment.js"></script>
+
+  <h3>Comments</h3>
+    {{#each comments as |comment| }}
+  <div class="row mb-4 project">
+    <p>{{comment.comment_body}}</p>
+   
+  </div>
+  {{/each}}
+  </div>
+
+
+<script src="/js/comment.js"></script>
 
 
