--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,14 +7,15 @@
 {{#if logged_in}}
     <form class="form new-project-form">
       <div class="form-group">
-            <label for="project-desc">Comment:</label>
+            <label for="project-desc">comment:</label>
             <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Add Comment</button>
+            <button type="submit" class="btn btn-primary">Comment Now</button>
           </div>
           <div>
           {{else}}
+          <p>You must be logged in to comment:</p>
           <a href="/login">login</a>
           {{/if}}
           </div>
